<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ac4_wallpaper1_1920x1080"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="387dp"
        android:layout_height="@dimen/margin_padding_40dp"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:hint="@string/string_nomer_telphone"
        android:inputType="number"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPhoneNumber"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:layout_marginBottom="@dimen/margin_padding_16dp"
        android:text="@string/string_open_nomer"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtWebsiteUri"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_40dp"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:hint="@string/string_masukkan_url"
        android:inputType="textUri"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnWebsiteUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:layout_marginBottom="@dimen/margin_padding_16dp"
        android:text="@string/string_open_browser"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtLocationUri"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_40dp"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:hint="@string/string_buka_lokasi"
        android:inputType="textUri"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLocationUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:layout_marginBottom="@dimen/margin_padding_16dp"
        android:text="@string/string_open_location"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtShareText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_40dp"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:hint="@string/string_masukkan_text"
        android:inputType="text"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:text="@string/string_share_text"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />
</LinearLayout>